Add more example text to the about us section

--- a/htdocs/_includes/about.html
+++ b/htdocs/_includes/about.html
@@ -9,10 +9,17 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Savas is a team of people. It's true.</p>
+                    <p>Savas is a team of people. It's true.
+                    It's Anne, Chris, Dan, Kosta, and Tim in alphabetical first
+                    name order.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>We do lots of things, that's also true.</p>
+                    <p>
+                        We do full site builds <br />
+                        We ensure you are adhering to standards and best practices <br />
+                        We bring order to sites that desperately need them <br />
+                        We buy templates and apply them to your site
+                    </p>
                 </div>
             </div>
         </div>
