--- a/htdocs/_includes/nav.html
+++ b/htdocs/_includes/nav.html
@@ -19,10 +19,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#about">Who We Are</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#portfolio">What We Do</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#portfolio">Blog</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
