SAV-15: reorder sections
Change "about" to "who we are," add "what we do,"
add a space for a blog once it's ready

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,17 +19,22 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">Who We Are</a>
+                        <a href="#whoweare">Who We Are</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">What We Do</a>
+                        <a href="#whatwedo">What We Do</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Blog</a>
+                        <a href="#portfolio">Our Work</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
+                    <!--- Commenting out until blog exists
+                    <li class="page-scroll">
+                        <a href="#blog">Blog</a>
+                    </li>
+                    --->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
