--- a/_includes/whatwedo.html
+++ b/_includes/whatwedo.html
@@ -1,17 +1,15 @@
- <!-- About Section -->
-    <section class="success" id="about">
+ <!-- What We Do Section -->
+    <section class="success" id="whatwedo">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About Us</h2>
+                    <h2>What We Do</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Savas is a team of people. It's true.
-                    It's Anne, Chris, Dan, Kosta, and Tim in alphabetical first
-                    name order.</p>
+                    <p>This is a bunch of info on what we do and how different and special we are. Sooooo special.</p>
                 </div>
                 <div class="col-lg-4">
                     <p>
