--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,9 @@
     <body id="page-top" class="index">
     {% include nav.html %}
     {% include header.html %}
+    {% include whoweare.html %}
+    {% include whatwedo.html %}
     {% include portfolio_grid.html %}
-    {% include about.html %}
     {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
