--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,11 +30,11 @@
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
-                    <!--- Commenting out until blog exists
+                    <!-- Commenting out until blog exists
                     <li class="page-scroll">
                         <a href="#blog">Blog</a>
-                    </li>
-                    --->
+                    </li> 
+                    -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
