SAV-16: set up 'who we are' section

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -203,6 +203,17 @@ section.success {
 
 .logo-text {
     width: 600px;
+
+.profile-item {
+    margin-top: 20px;
+}
+
+.profile-item img {
+    width: 200px;
+}
+
+.profile-item p {
+    color: #{{ site.color.secondary-dark }};
 }
 
 #portfolio .portfolio-item {
