--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,7 +28,7 @@
                         <a href="#portfolio">Our Work</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#footer">Contact</a>
                     </li>
                     <!-- Commenting out until blog exists
                     <li class="page-scroll">
