--- a/_includes/whoweare.html
+++ b/_includes/whoweare.html
@@ -15,7 +15,7 @@
             </div>
             <div class="row profile-item">
                 <div class="col-lg-3 col-lg-offset-1">
-                    <img src="img/profiles/{{ profile.img }}" class="img-responsive" alt="{{ profile.name }}">
+                    <img src="/img/profiles/{{ profile.img }}" class="img-responsive" alt="{{ profile.name }}">
                 </div>
                 <div class="col-lg-7">
                     <p>{{ profile.bio }}</p>
