SAV-16: add responsive behavior

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -219,8 +219,20 @@ section.success {
 }
 
 .profile-item img {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 300px;
     border-radius: 6px;
-    width: 95%;
+}
+
+@media(max-width:768px) {
+    .profile-item h3 {
+        text-align: center;
+    }
+    .profile-item p {
+        margin-top: 15px;
+    }
 }
 
 #portfolio .portfolio-item {
