--- a/_includes/whoweare.html
+++ b/_includes/whoweare.html
@@ -9,15 +9,15 @@
             </div>
             {% for profile in site.data.profiles %}
             <div class="row profile-item">
-                <div class="col-lg-10 col-lg-offset-1">
+                <div class="col-md-10 col-md-offset-1 col-sm-12">
                     <h3>{{ profile.name }}, {{ profile.title }}</h3>
                 </div>
             </div>
             <div class="row profile-item">
-                <div class="col-lg-3 col-lg-offset-1">
+                <div class="col-md-3 col-md-offset-1 col-sm-3">
                     <img src="/img/profiles/{{ profile.img }}" class="img-responsive" alt="{{ profile.name }}">
                 </div>
-                <div class="col-lg-7">
+                <div class="col-md-7 col-sm-9">
                     <p>{{ profile.bio }}</p>
                 </div>
             </div>
