--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -36,7 +36,7 @@ h6 {
     font-weight: 700;
 }
 
-hr.star-light,
+hr.star-dark,
 hr.star-primary {
     margin: 25px auto 30px;
     padding: 0;
@@ -46,7 +46,7 @@ hr.star-primary {
     text-align: center;
 }
 
-hr.star-light:after,
+hr.star-dark:after,
 hr.star-primary:after {
     content: "\f005";
     display: inline-block;
@@ -57,12 +57,12 @@ hr.star-primary:after {
     font-size: 2em;
 }
 
-hr.star-light {
-    border-color: #fff;
+hr.star-dark {
+    border-color: #{{ site.color.secondary }};
 }
 
-hr.star-light:after {
-    color: #fff;
+hr.star-dark:after {
+    color: #{{ site.color.secondary }};
     background-color: #{{ site.color.primary }};
 }
 
@@ -81,7 +81,7 @@ hr.star-primary:after {
 
 header {
     text-align: center;
-    color: #fff;
+    color: #{{ site.color.secondary-dark }};
     background: #{{ site.color.primary }};
 }
 
@@ -187,7 +187,7 @@ section h2 {
 }
 
 section.success {
-    color: #fff;
+    color: #{{ site.color.secondary }};
     background: #{{ site.color.primary }};
 }
 
@@ -216,6 +216,10 @@ section.success {
 .profile-item p {
     color: #{{ site.color.secondary-dark }};
     font-size: 19px;
+}
+
+.profile-item a {
+    color: #{{ site.color.secondary }};
 }
 
 .profile-item img {
@@ -252,7 +256,7 @@ section.success {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: rgba(246,67,62,.9);
+    background: rgba(247,214,17,.9);
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
