--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive logo-text" src="/img/SavasLogo.png" alt="Savas Logo">
+                    <img class="img-responsive logo-text" src="/img/SavasLogo-05.png" alt="Savas Logo">
                     <div class="intro-text">
-                        <hr class="star-light">
+                        <hr class="star-dark">
                         <span class="skills">A web development and design shop</span>
                     </div>
                 </div>
