--- a/_includes/whoweare.html
+++ b/_includes/whoweare.html
@@ -1,5 +1,5 @@
  <!-- About Section -->
-    <section id="whoweare">
+    <section id="whoweare" class="light-background">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
