Comment out unfinished what we do section

--- a/_includes/whatwedo.html
+++ b/_includes/whatwedo.html
@@ -9,15 +9,17 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>This is a bunch of info on what we do and how different and special we are. Sooooo special.</p>
+                    <p><!-- This is a bunch of info on what we do and how different and special we are. Sooooo special. --></p>
                 </div>
                 <div class="col-lg-4">
                     <p>
+                        <!--
                         We do full site builds <br />
                         We ensure you are adhering to standards and best practices <br />
                         We bring order to sites that desperately need them <br />
                         We buy templates and apply them to your site
-                    </p>
+                        -->
+                   </p>
                 </div>
             </div>
         </div>
