--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -37,7 +37,8 @@ h6 {
 }
 
 hr.star-dark,
-hr.star-primary {
+hr.star-primary,
+hr.star-bright {
     margin: 25px auto 30px;
     padding: 0;
     max-width: 250px;
@@ -47,7 +48,8 @@ hr.star-primary {
 }
 
 hr.star-dark:after,
-hr.star-primary:after {
+hr.star-primary:after,
+hr.star-bright:after {
     content: "\f005";
     display: inline-block;
     position: relative;
@@ -63,7 +65,7 @@ hr.star-dark {
 
 hr.star-dark:after {
     color: #{{ site.color.secondary }};
-    background-color: #{{ site.color.primary }};
+    background-color: #fff;
 }
 
 hr.star-primary {
@@ -73,6 +75,15 @@ hr.star-primary {
 hr.star-primary:after {
     color: #{{ site.color.secondary-dark }};
     background-color: #fff;
+}
+
+hr.star-bright {
+    border-color: #{{ site.color.primary }};
+}
+
+hr.star-bright:after {
+    color: #{{ site.color.primary }};
+    background-color: #{{ site.color.secondary-dark }};
 }
 
 .img-centered {
@@ -85,8 +96,8 @@ hr.star-primary:after {
 
 header {
     text-align: center;
-    color: #{{ site.color.secondary-dark }};
-    background: #{{ site.color.primary }};
+    color: #{{ site.color.secondary }};
+    background: #{{ site.color.secondary-dark }};
 }
 
 header .container {
@@ -192,7 +203,6 @@ section h2 {
 
 section.success {
     color: #{{ site.color.secondary }};
-    background: #{{ site.color.primary }};
 }
 
 @media(max-width:767px) {
@@ -206,7 +216,7 @@ section.success {
 }
 
 .logo-text {
-    width: 600px;
+    width: 500px;
 }
 
 .profile-item {
