SAV-17: Update the What We Do section.

--- a/_includes/whatwedo.html
+++ b/_includes/whatwedo.html
@@ -9,17 +9,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p><!-- This is a bunch of info on what we do and how different and special we are. Sooooo special. --></p>
+                    <p>We're a full-service web development and design shop, anchored in Durham, NC and with some roots in Boston, MA too.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>
-                        <!--
-                        We do full site builds <br />
-                        We ensure you are adhering to standards and best practices <br />
-                        We bring order to sites that desperately need them <br />
-                        We buy templates and apply them to your site
-                        -->
-                   </p>
+                    <p>Our expertise is in:</p>
+                    <p>- Full Drupal site builds: information architecture, theming, development</p>
+                    <p>- Code reviews and site audits for security issues and best practices</p>
+                    <p>- Data visualation and mapping projects</p>
+                    <p>- Large scale data migration projects</p>
                 </div>
             </div>
         </div>
