SAV-17: Rework what we do

--- a/_includes/whatwedo.html
+++ b/_includes/whatwedo.html
@@ -9,14 +9,18 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>We're a full-service web development and design shop, anchored in Durham, NC and with some roots in Boston, MA too.</p>
+                    <ul>
+                        <li>Full Drupal site builds: information architecture, theming, development</li>
+                        <li>Code reviews and site audits for security issues, coding standards and best practices</li>
+                        <li>Data visualation and mapping projects</li>
+                    </ul>
                 </div>
                 <div class="col-lg-4">
-                    <p>Our expertise is in:</p>
-                    <p>- Full Drupal site builds: information architecture, theming, development</p>
-                    <p>- Code reviews and site audits for security issues and best practices</p>
-                    <p>- Data visualation and mapping projects</p>
-                    <p>- Large scale data migration projects</p>
+                    <ul>
+                        <li>Automated testing for your website, using Jenkins, Travis CI, and Behat</li>
+                        <li>Large scale data migration projects</li>
+                        <li>Contribute to community groups and open source projects</li>
+                    </ul>
                 </div>
             </div>
         </div>
