--- a/_includes/whoweare.html
+++ b/_includes/whoweare.html
@@ -7,6 +7,11 @@
                     <hr class="star-primary">
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p>We're a full-service web development and design shop, anchored in Durham, NC and with some roots in Boston, MA too.</p>
+                </div>
+            </div>
             {% for profile in site.data.profiles %}
             <div class="row profile-item">
                 <div class="col-md-10 col-md-offset-1 col-sm-12">
