Update colors to palette #1

--- a/_includes/whatwedo.html
+++ b/_includes/whatwedo.html
@@ -8,17 +8,17 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
+                <div class="col-lg-5 col-lg-offset-1">
                     <ul>
                         <li>Full Drupal site builds: information architecture, theming, development</li>
                         <li>Code reviews and site audits for security issues, coding standards and best practices</li>
-                        <li>Data visualation and mapping projects</li>
+                        <li>Large scale data migration projects</li>
                     </ul>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-5">
                     <ul>
                         <li>Automated testing for your website, using Jenkins, Travis CI, and Behat</li>
-                        <li>Large scale data migration projects</li>
+                        <li>Data visualization and mapping projects</li>
                         <li>Contribute to community groups and open source projects</li>
                     </ul>
                 </div>
