--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -8,7 +8,7 @@ body {
     overflow-x: hidden;
 }
 
-p {
+p, li {
     font-size: 20px;
 }
 
@@ -23,6 +23,11 @@ a:active,
 a.active {
     outline: 0;
     color: #{{ site.color.primary }};
+}
+
+.accent-hover:hover {
+    color: #{{ site.color.accent }};
+    text-decoration: none;
 }
 
 h1,
@@ -65,7 +70,7 @@ hr.star-dark {
 
 hr.star-dark:after {
     color: #{{ site.color.secondary }};
-    background-color: #fff;
+    background-color: #{{ site.color.primary }};
 }
 
 hr.star-primary {
@@ -97,7 +102,7 @@ hr.star-bright:after {
 header {
     text-align: center;
     color: #{{ site.color.secondary }};
-    background: #{{ site.color.secondary-dark }};
+    background: #{{ site.color.primary }};
 }
 
 header .container {
@@ -107,7 +112,8 @@ header .container {
 
 header img {
     display: block;
-    margin: 0 auto 20px;
+    margin: 0 auto 100px;
+    width: 400px;
 }
 
 header .intro-text .name {
@@ -203,6 +209,7 @@ section h2 {
 
 section.success {
     color: #{{ site.color.secondary }};
+    background-color: #{{ site.color.primary }};
 }
 
 @media(max-width:767px) {
@@ -213,10 +220,6 @@ section.success {
     section.first {
         padding-top: 75px;
     }
-}
-
-.logo-text {
-    width: 500px;
 }
 
 .profile-item {
@@ -273,7 +276,8 @@ section.success {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: rgba(247,214,17,.9);
+    /* This should be equal to the site primary color */
+    background: rgba(244, 209, 166, .9);
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
@@ -318,6 +322,12 @@ section.success {
     border-color: #{{ site.color.secondary-dark }};
 }
 
+.btn-default:hover,
+.btn-default:focus {
+    background-color: #{{ site.color.accent }};
+    border-color: #{{ site.color.accent }};
+}
+
 .btn-success:hover,
 .btn-success:focus {
     background-color: #{{ site.color.secondary-dark }};
@@ -338,7 +348,7 @@ section.success {
 .btn-outline:active,
 .btn-outline.active {
     border: solid 2px #fff;
-    color: #{{ site.color.primary }};
+    color: #{{ site.color.accent }};
     background: #fff;
 }
 
