--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive logo-text" src="/img/SavasLogo-08.png" alt="Savas Logo">
+                    <img class="img-responsive logo-text" src="/img/SavasLogo.png" alt="Savas Logo">
+                    <hr class="star-dark">
                     <div class="intro-text">
                         <span class="skills">A web development and design shop</span>
                     </div>
