--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -13,7 +13,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>{{ website.name }}</h2>
-                            <hr class="star-primary">
+                            <hr class="star-medium">
                             <img src="/img/portfolio/{{ website.logo }}" class="img-responsive img-centered" alt="{{ website.name }}">
                             <p>{{ website.description }}</p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
