--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -110,11 +110,11 @@ header .container {
     padding-bottom: 50px;
 }
 
-header img {
+/*header img {
     display: block;
     margin: 0 auto 100px;
     width: 400px;
-}
+}*/
 
 header .intro-text .name {
     display: block;
