--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,13 +2,23 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <img class="img-responsive logo-text" src="/img/SavasLogo.png" alt="Savas Logo">
-                    <hr class="star-dark">
+                <div class="col-lg-4 col-med-12">
+                    <img src="/img/SavasOwl.png" alt="Savas Logo">
+                    <h1>Savas Labs</h1>
                     <div class="intro-text">
                         <span class="skills">A web development and design shop</span>
                     </div>
                 </div>
+                <div class="col-lg-8 col-med-12">
+                        <ul>
+                            <li>Full Drupal site builds: information architecture, theming, development</li>
+                            <li>Code reviews and site audits for security issues, coding standards and best practices</li>
+                            <li>Large scale data migration projects</li>
+                            <li>Automated testing for your website, using Jenkins, Travis CI, and Behat</li>
+                            <li>Data visualization and mapping projects</li>
+                            <li>Contribute to community groups and open source projects</li>
+                        </ul>
+                    </div>
             </div>
         </div>
     </header>
