--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,23 +2,22 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-med-12">
+                <div class="col-lg-4 col-sm-12">
                     <img src="/img/SavasOwl.png" alt="Savas Logo">
                     <h1>Savas Labs</h1>
                     <div class="intro-text">
                         <span class="skills">A web development and design shop</span>
                     </div>
                 </div>
-                <div class="col-lg-8 col-med-12">
-                        <ul>
-                            <li>Full Drupal site builds: information architecture, theming, development</li>
-                            <li>Code reviews and site audits for security issues, coding standards and best practices</li>
-                            <li>Large scale data migration projects</li>
-                            <li>Automated testing for your website, using Jenkins, Travis CI, and Behat</li>
-                            <li>Data visualization and mapping projects</li>
-                            <li>Contribute to community groups and open source projects</li>
-                        </ul>
-                    </div>
+                <div class="col-lg-8 col-sm-12 right-frame">
+                    <h2>SAVAS is:</h2>
+
+                    <p>Ready to build <em>your</em> vision for your site</p>
+                    <p>Founded on years of Drupal experience</p>
+                    <p>Focused on creating standards compliant, sustainable code</p>
+                    <p>A learning environment, where we draw on diverse experience to teach each other best practices and standards</p>
+                    <p>Skilled in all aspects of development, from back-end to theming and testing</p>
+                </div>
             </div>
         </div>
     </header>
