--- a/_includes/whoweare.html
+++ b/_includes/whoweare.html
@@ -1,12 +1,18 @@
- <!-- About Section -->
-    <section id="whoweare" class="light-background">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Who We Are</h2>
-                    <hr class="star-medium">
-                </div>
+
+<!-- About Section -->
+<section>
+    <div class="success">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Who We Are</h2>
+                <hr class="star-medium">
             </div>
+        </div>
+    </div>
+
+</section>
+    <section id="whoweare" class="light-background">
+         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <p>We're a full-service web development and design shop, anchored in Durham, NC and with some roots in Boston, MA too.</p>
