Optimize for retina display

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top"><img src="/img/SavasLogoTiny.png" alt="Savas Labs"></a>
+                <a class="navbar-brand" href="#page-top"><img src="/img/SavasLogoTiny.png" alt="Savas Labs" width="114px" height="48px"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
