--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-sm-12">
-                    <img src="/img/SavasOwl.png" alt="Savas Logo">
+                    <img src="/img/SavasOwl.png" alt="Savas Logo" width="62px" height="114px">
                     <h1>Savas Labs</h1>
                     <div class="intro-text">
                         <span class="skills">A web development and design shop</span>
