--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -276,6 +276,7 @@ section.success {
     width: 100%;
     height: 100%;
     opacity: 0;
+    border-radius: 6px;
     /* This should be equal to the site 'light' color */
     background: rgba(244, 209, 166, .9);
     -webkit-transition: all ease .5s;
