--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,13 +10,13 @@
                     </div>
                 </div>
                 <div class="col-lg-8 col-sm-12 right-frame">
-                    <h2>SAVAS is:</h2>
-
-                    <p>Ready to build <em>your</em> vision for your site</p>
-                    <p>Founded on years of Drupal experience</p>
-                    <p>Focused on creating standards compliant, sustainable code</p>
-                    <p>A learning environment, where we draw on diverse experience to teach each other best practices and standards</p>
-                    <p>Skilled in all aspects of development, from back-end to theming and testing</p>
+                    <ul>
+                    <li>Ready to build <em>your</em> vision for your site</li>
+                    <li>Founded on years of Drupal experience</li>
+                    <li>Focused on creating standards compliant, sustainable code</li>
+                    <li>A learning environment, where we draw on diverse experience to teach each other best practices and standards</li>
+                    <li>Skilled in all aspects of development, from back-end to theming and testing</li>
+                        </ul>
                 </div>
             </div>
         </div>
