--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -1,5 +1,5 @@
 <!-- Portfolio Grid Section -->
-    <section id="portfolio" class="light-background">
+    <section id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
