Adjust spacing and add owl from palette #1.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,10 +3,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-sm-12">
-                    <img src="/img/SavasOwl.png" alt="Savas Logo" width="62px" height="114px">
+                    <img src="/img/SavasOwl_larger.png" alt="Savas Logo" width="62px" height="114px">
                     <h1>Savas Labs</h1>
                     <div class="intro-text">
-                        <span class="skills">A web development and design shop</span>
+                        <span class="skills">A web development<br>and design shop</span>
                     </div>
                 </div>
                 <div class="col-lg-8 col-sm-12 right-frame">
