--- a/_includes/whoweare.html
+++ b/_includes/whoweare.html
@@ -1,6 +1,6 @@
 
 <!-- About Section -->
-<section>
+<section id="whoweare">
     <div class="success">
         <div class="row">
             <div class="col-lg-12 text-center">
