--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 <html>
   {% include head.html %}
   <body id="page-top" class="index">
-    {% include nav.html %}
+    {% include nav_posts.html %}
     {% include header.html %}
     <div class="post">
       <div class="post-header">
