--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-sm-12">
-                    <img src="/img/SavasOwl_larger.png" alt="Savas Logo" width="62px" height="114px">
+                    <img src="/img/SavasOwl_large.png" alt="Savas Logo" width="62px" height="114px">
                     <h1>Savas Labs</h1>
                     <div class="intro-text">
                         <span class="skills">A web development<br>and design shop</span>
@@ -13,7 +13,7 @@
                     <ul>
                     <li>Ready to build <em>your</em> vision for your site</li>
                     <li>Founded on years of Drupal experience</li>
-                    <li>Focused on creating standards compliant, sustainable code</li>
+                    <li>Focused on creating standards-compliant, sustainable code</li>
                     <li>A learning environment, where we draw on diverse experience to teach each other best practices and standards</li>
                     <li>Skilled in all aspects of development, from back-end to theming and testing</li>
                         </ul>
