SAV-29: add blog page and menu links

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,11 +30,9 @@
                     <li class="page-scroll">
                         <a href="#footer">Contact</a>
                     </li>
-                    <!-- Commenting out until blog exists
                     <li class="page-scroll">
-                        <a href="#blog">Blog</a>
+                        <a href="/blog">Blog</a>
                     </li> 
-                    -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
