--- a/_includes/nav_posts.html
+++ b/_includes/nav_posts.html
@@ -19,7 +19,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="../blog">Blog</a>
+                        <a href="./blog">Recent Blog Posts</a>
                     </li>
                 </ul>
             </div>
