--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,7 +3,42 @@
   {% include head.html %}
   <body id="page-top" class="index">
     {% include nav_posts.html %}
+
+    <section>
+      <div class="container success">
+        <div class="row">
+          <div class="col-lg-10 col-lg-offset-1">
+            <!-- Loop through paginated posts -->
+            {% for post in paginator.posts %}
+            <div class="blog-post">
+              <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+              <p class="post-info small">Posted by {{ post.author }} on {{ post.date }}</p>
+              <div class="summary">
+                <p>{{ post.summary }}</p>
+              </div>
+            </div>
+            {% endfor %}
+          </div>
+        </div>  
+      </div>
+    </section>
     
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-10 col-lg-offset-1">   
+            <!-- Pagination links -->
+            <div class="pagination">
+              {% if paginator.previous_page %}
+                <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
+              {% endif %}
+              <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+              {% if paginator.next_page %}
+                <a href="{{ paginator.next_page_path }}" class="next">Next</a>
+              {% endif %}
+            </div>
+          </div>
+        </div>  
+      </div>
 
     {% include footer.html %}
     {% include js.html %}
