SAV-29: Fix menu links on post pages

--- a/_includes/nav_posts.html
+++ b/_includes/nav_posts.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="../"><img src="/img/SavasLogoTiny.png" alt="Savas Labs" width="114px" height="48px"></a>
+                <a class="navbar-brand" href="/"><img src="/img/SavasLogoTiny.png" alt="Savas Labs" width="114px" height="48px"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,7 +19,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="./blog">Recent Blog Posts</a>
+                        <a href="/blog">Recent Blog Posts</a>
                     </li>
                 </ul>
             </div>
