--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,14 +3,25 @@
   {% include head.html %}
   <body id="page-top" class="index">
     {% include nav_posts.html %}
-    <div class="post">
-      <div class="post-header">
-        <h2>{{ page.title }}</h2>
+
+    <section>
+      <div class="container success">
+        <div class="row">
+          <div class="col-lg-10 col-lg-offset-1">
+            <div class="blog-post">
+              <div class="post-header">
+                <h1>{{ page.title }}</h1>
+                <p class="post-info small">Posted by {{ page.author }} on {{ page.date | date: "%F"}}</p>
+              </div>
+              <article class="post-content">
+                {{ content }}
+              </article>
+            </div>
+          </div>
+        </div>  
       </div>
-      <article class="post-content">
-        {{ content }}
-      </article>
-    </div>
+    </section>
+
     {% include footer.html %}
     {% include js.html %}
   </body>
