SAV-30: Correct div class to avoid whitespace on mobile
And remove padding-left on ul in header

--- a/_includes/whoweare.html
+++ b/_includes/whoweare.html
@@ -1,7 +1,6 @@
-
 <!-- About Section -->
 <section id="whoweare">
-    <div class="success">
+    <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2>Who We Are</h2>
