--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -102,7 +102,7 @@ header .intro-text .skills {
 
 header .right-frame {
     text-align: left;
-    
+    padding-left: 0;
     margin-top: 50px;
 }
 
