Adjust header content

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,11 +11,11 @@
                 </div>
                 <div class="col-lg-8 col-sm-12 right-frame">
                     <ul>
-                    <li>Ready to build <em>your</em> vision for your site</li>
+                    <li>Ready to build your vision for your site</li>
                     <li>Founded on years of Drupal experience</li>
                     <li>Focused on creating standards-compliant, sustainable code</li>
                     <li>A learning environment, where we draw on diverse experience to teach each other best practices and standards</li>
-                    <li>Skilled in all aspects of development, from back-end to theming and testing</li>
+                    <li>Skilled in all aspects of development, from back-end to theming and automated testing</li>
                         </ul>
                 </div>
             </div>
