SAV-18: Expand portfolio grid to 6 items.
And fix image sizes that were causing issues.

--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -8,9 +8,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-8 col-sm-offset-2">
+                <div class="col-sm-12">
                     {% for website in site.data.portfolio %}
-                        <div class="col-sm-6 portfolio-item">
+                        <div class="col-sm-4 portfolio-item">
                             <a href="#portfolioModal-{{ website.modal-id }}" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
                                     <div class="caption-content">
@@ -19,7 +19,7 @@
                                 </div>
                                 <img src="/img/portfolio/{{ website.logo }}" class="img-responsive" alt="{{ website.name }}">
                             </a>
-                        </div>  
+                        </div>
                     {% endfor %}
                 </div>  
             </div>
