Change link color site-wide for visibility.

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -23,7 +23,7 @@ a:focus,
 a:active,
 a.active {
     outline: 0;
-    color: #{{ site.color.light }};
+    color: #{{ site.color.medium }};
 }
 
 .accent-hover:hover {
